errors vertalen deel 1

--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -19,3 +19,30 @@ lblWinnaar=Winnaar
 lblOverzicht=Overzicht
 
 # errors
+controleerAantalSpelers1=Aantal spelers incorrect
+controleerAantalSpelers2=Er moeten minstens 2 spelers aangemeld zijn
+kanKaartGekochtWorden=Deze kaart kan niet gekocht worden, je hebt niet genoeg edelsteenfiches!
+controleerAantal=Er zijn geen fiches meer van het soort %s
+controleerHoeveelheidFichesNemen1=Je hebt al 2 fiches van dezelfde soort!
+controleerHoeveelheidFichesNemen2=Voor 2 dezelfde fiches moeten er min 4 fiches op de stapel liggen
+controleerHoeveelheidFichesNemen3=Je moet 3 verschillende fiches nemen!
+controleerGebruikersnaam1=gebruikersnaam mag geen speciale tekens buiten spatie en _ bevatten
+controleerGebruikersnaam2=Gebruikersnaam moet starten met een letter (klein of groot)!
+controleerGeboortejaar1=Vul positief getal in
+controleerGeboortejaar2=Gebruiker moet minimum 6 en maximum 99 jaar oud zijn
+InvoerException=foute invoer
+btnLogInClicked=Deze speler is al aangemeld!\n
+OverzichtSpelersController1=Spel gestart
+OverzichtSpelersController2=Aantal spelers correct & spel is aangemaakt!
+OverzichtSpelersController3=Aantal spelers incorrect
+btnFicheClicked1=Unexpected value: 
+btnFicheClicked2=Je hebt alle fiches gekozen
+btnFicheClicked3=Edelsteenfiche gekozen!
+btnFicheClicked4=Je hebt deze edelsteenfiche van het soort %s gekozen!
+btnFicheClicked5=Dit mag niet!
+controleerAlDrieFichesGekozen1=Fiches gekozen!
+controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
+btnNiveauClicked1=Je hebt een edele op bezoek!
+btnNiveauClicked2=Niet genoeg edelsteenfiches!
+
+
