deel 2 van taalhelper

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -19,27 +19,39 @@ lblWinnaar=Winner
 lblOverzicht=Overview
 
 # errors
+#dc
 controleerAantalSpelers1= Number of players incorrect
 controleerAantalSpelers2=At least 2 players must be logged in
+#spel
 kanKaartGekochtWorden= This card cannot be bought, you don't have enough gem tokens!
 controleerAantal= There are no more gems of the kind %s
 controleerHoeveelheidFichesNemen1=You already have 2 gems of the same kind!
 controleerHoeveelheidFichesNemen2=For 2 of the same kind of gems, there must be at least 4 gems on the stack.
 controleerHoeveelheidFichesNemen3=You must take 3 different gems!
+#speler
 controleerGebruikersnaam1=Username must not contain any special characters other than space and _
 controleerGebruikersnaam2=Username must start with a letter (lowercase or uppercase)!
 controleerGeboortejaar1=Fill in positive number
 controleerGeboortejaar2=User must be minimum 6 and maximum 99 years old
+#vind ikniet
 InvoerException=wrong input
-btnLogInClicked=This player is already logged in!
+#aanmeldcontroller
+btnLogInClicked1=Create new player?
+btnLogInClicked2=Do you want to create a new player?
+btnLogInClicked3=This player is already logged in!
+AanmeldenMislukt1=Login failed
+AanmeldenMislukt2=Must be a positive number
+AanmeldenGelukt1=Login successful
+AanmeldenGelukt2=Player with name %s and year of birth %d is logged in
+#overzichtcontroller
 OverzichtSpelersController1=Game Started
 OverzichtSpelersController2=Number of players correct & game has been created!
 OverzichtSpelersController3=Number of players incorrect
+#starttspelcontroller
 btnFicheClicked1=Unexpected value: 
-btnFicheClicked2=You have selected all the gems.
-btnFicheClicked3=You have chosen all gems!
-btnFicheClicked4=You have selected this gem tile of type %s!
-btnFicheClicked5=This is not allowed!
+btnFicheClicked2=You have chosen all gems!
+btnFicheClicked3=You have selected this gem tile of type %s!
+btnFicheClicked4=This is not allowed!
 controleerAlTweeGelijkeFichesGekozen1=You have chosen all the gems!
 controleerAlTweeGelijkeFichesGekozen2=gems chosen!
 btnNiveauClicked1=You have a noble visiting you!
