--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -19,27 +19,39 @@ lblWinnaar=Winnaar
 lblOverzicht=Overzicht
 
 # errors
+# dc
 controleerAantalSpelers1=Aantal spelers incorrect
 controleerAantalSpelers2=Er moeten minstens 2 spelers aangemeld zijn
+#spel
 kanKaartGekochtWorden=Deze kaart kan niet gekocht worden, je hebt niet genoeg edelsteenfiches!
 controleerAantal=Er zijn geen fiches meer van het soort %s
 controleerHoeveelheidFichesNemen1=Je hebt al 2 fiches van dezelfde soort!
 controleerHoeveelheidFichesNemen2=Voor 2 dezelfde fiches moeten er min 4 fiches op de stapel liggen
 controleerHoeveelheidFichesNemen3=Je moet 3 verschillende fiches nemen!
+#speler
 controleerGebruikersnaam1=gebruikersnaam mag geen speciale tekens buiten spatie en _ bevatten
 controleerGebruikersnaam2=Gebruikersnaam moet starten met een letter (klein of groot)!
 controleerGeboortejaar1=Vul positief getal in
 controleerGeboortejaar2=Gebruiker moet minimum 6 en maximum 99 jaar oud zijn
-InvoerException=foute invoer
-btnLogInClicked=Deze speler is al aangemeld!\n
+#vind ik niet
+InvoerException=foute invoer 
+#aanmeldencontroller
+btnLogInClicked1=Nieuwe speler aanmaken?
+btnLogInClicked2=Wil je een nieuwe speler aanmaken?
+btnLogInClicked3=Deze speler is al aangemeld!\n
+AanmeldenMislukt1=Aanmelden mislukt
+AanmeldenMislukt2=Moet een positief getal zijn
+AanmeldenGelukt1=Aanmelden gelukt
+AanmeldenGelukt2=Speler met naam %s en geboortejaar %d is aangemeld
+#overzichtspelerscontoller
 OverzichtSpelersController1=Spel gestart
 OverzichtSpelersController2=Aantal spelers correct & spel is aangemaakt!
 OverzichtSpelersController3=Aantal spelers incorrect
+#starttspelcontroller
 btnFicheClicked1=Unexpected value: 
-btnFicheClicked2=Je hebt alle fiches gekozen
-btnFicheClicked3=Edelsteenfiche gekozen!
-btnFicheClicked4=Je hebt deze edelsteenfiche van het soort %s gekozen!
-btnFicheClicked5=Dit mag niet!
+btnFicheClicked2=Edelsteenfiche gekozen!
+btnFicheClicked3=Je hebt deze edelsteenfiche van het soort %s gekozen!
+btnFicheClicked4=Dit mag niet!
 controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
 btnNiveauClicked1=Je hebt een edele op bezoek!
