Foutjes uit vertaling halen

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -54,16 +54,7 @@ btnFicheClicked3=You have selected this gem tile of type %s!
 btnFicheClicked4=This is not allowed!
 controleerAlTweeGelijkeFichesGekozen1=You have chosen all the gems!
 controleerAlTweeGelijkeFichesGekozen2=gems chosen!
+controleerAlDrieFichesGekozen1=gems chosen!
+controleerAlDrieFichesGekozen2=You have selected all gems!
 btnNiveauClicked1=You have a noble visiting you!
 btnNiveauClicked2=Not enough noble gems!
-
-
-
-
-
-
-
-
-
-
-
