--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -54,7 +54,7 @@ btnFicheClicked3=Je hebt deze edelsteenfiche van het soort %s gekozen!
 btnFicheClicked4=Dit mag niet!
 controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
+controleerAlDrieFichesGekozen1=Fiches gekozen!
+controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen!
 btnNiveauClicked1=Je hebt een edele op bezoek!
 btnNiveauClicked2=Niet genoeg edelsteenfiches!
-
-
