Oplossing failed tests

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -29,8 +29,8 @@ controleerHoeveelheidFichesNemen1=You already have 2 gems of the same kind!
 controleerHoeveelheidFichesNemen2=For 2 of the same kind of gems, there must be at least 4 gems on the stack.
 controleerHoeveelheidFichesNemen3=You must take 3 different gems!
 #speler
-controleerGebruikersnaam1=Username must not contain any special characters other than space and _
-controleerGebruikersnaam2=Username must start with a letter (lowercase or uppercase)!
+controleerGebruikersnaam1=Username cannot be empty
+controleerGebruikersnaam2=Username must start with a letter (lowercase or uppercase) and cant contain any special characters!
 controleerGeboortejaar1=Fill in positive number
 controleerGeboortejaar2=User must be minimum 6 and maximum 99 years old
 #vind ikniet
