--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -29,8 +29,8 @@ controleerHoeveelheidFichesNemen1=Je hebt al 2 fiches van dezelfde soort!
 controleerHoeveelheidFichesNemen2=Voor 2 dezelfde fiches moeten er min 4 fiches op de stapel liggen
 controleerHoeveelheidFichesNemen3=Je moet 3 verschillende fiches nemen!
 #speler
-controleerGebruikersnaam1=gebruikersnaam mag geen speciale tekens buiten spatie en _ bevatten
-controleerGebruikersnaam2=Gebruikersnaam moet starten met een letter (klein of groot)!
+controleerGebruikersnaam1=Gebruikersnaam mag niet leeg zijn
+controleerGebruikersnaam2=Gebruikersnaam moet starten met een letter (kleine of drukletter) en mag geen speciale karakters bevatten
 controleerGeboortejaar1=Vul positief getal in
 controleerGeboortejaar2=Gebruiker moet minimum 6 en maximum 99 jaar oud zijn
 #vind ik niet
