warning wanneer er 2 edelen op bezoek kunnen komen + vertaling

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -58,3 +58,5 @@ controleerAlDrieFichesGekozen1=gems chosen!
 controleerAlDrieFichesGekozen2=You have selected all gems!
 btnNiveauClicked1=You have a noble visiting you!
 btnNiveauClicked2=Not enough noble gems!
+mogelijkeEdeleOpBezoek1=%s with prestige points %d%n
+mogelijkeEdeleOpBezoek2=You have several nobles visiting
