--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -58,3 +58,5 @@ controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen!
 btnNiveauClicked1=Je hebt een edele op bezoek!
 btnNiveauClicked2=Niet genoeg edelsteenfiches!
+mogelijkeEdeleOpBezoek1=%s met prestigepunten %d%n
+mogelijkeEdeleOpBezoek2=Je hebt meerdere edelen op bezoek
