warning wanneer er 2 edelen op bezoek kunnen komen is AF

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -58,5 +58,6 @@ controleerAlDrieFichesGekozen1=gems chosen!
 controleerAlDrieFichesGekozen2=You have selected all gems!
 btnNiveauClicked1=You have a noble visiting you!
 btnNiveauClicked2=Not enough noble gems!
+btnNiveauClicked3=You have %s visiting!
 mogelijkeEdeleOpBezoek1=%s with prestige points %d%n
 mogelijkeEdeleOpBezoek2=You have several nobles visiting
