--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -58,5 +58,6 @@ controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen!
 btnNiveauClicked1=Je hebt een edele op bezoek!
 btnNiveauClicked2=Niet genoeg edelsteenfiches!
+btnNiveauClicked3=Je hebt %s op bezoek!
 mogelijkeEdeleOpBezoek1=%s met prestigepunten %d%n
 mogelijkeEdeleOpBezoek2=Je hebt meerdere edelen op bezoek
