--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -52,6 +52,8 @@ btnFicheClicked1=Unexpected value:
 btnFicheClicked2=You have chosen all gems!
 btnFicheClicked3=You have selected this gem tile of type %s!
 btnFicheClicked4=This is not allowed!
+btnFicheClicked5=You have too many gems!
+btnFicheClicked6=Click on the gem you want to remove
 controleerAlTweeGelijkeFichesGekozen1=You have chosen all the gems!
 controleerAlTweeGelijkeFichesGekozen2=gems chosen!
 controleerAlDrieFichesGekozen1=gems chosen!
@@ -61,3 +63,5 @@ btnNiveauClicked2=Not enough noble gems!
 btnNiveauClicked3=You have %s visiting!
 mogelijkeEdeleOpBezoek1=%s with prestige points %d%n
 mogelijkeEdeleOpBezoek2=You have several nobles visiting
+verwijderExtraFiches1=Remove the gem %s
+verwijderExtraFiches2=You have too many gems
