--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -52,6 +52,8 @@ btnFicheClicked1=Unexpected value:
 btnFicheClicked2=Edelsteenfiche gekozen!
 btnFicheClicked3=Je hebt deze edelsteenfiche van het soort %s gekozen!
 btnFicheClicked4=Dit mag niet!
+btnFicheClicked5=Je hebt te veel fiches!
+btnFicheClicked6=Klik op een fiche die je wil verwijderen
 controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
 controleerAlDrieFichesGekozen1=Fiches gekozen!
@@ -61,3 +63,6 @@ btnNiveauClicked2=Niet genoeg edelsteenfiches!
 btnNiveauClicked3=Je hebt %s op bezoek!
 mogelijkeEdeleOpBezoek1=%s met prestigepunten %d%n
 mogelijkeEdeleOpBezoek2=Je hebt meerdere edelen op bezoek
+verwijderExtraFiches1=verwijder de fiche %s
+verwijderExtraFiches2=Je hebt te veel fiches
+
