deel van edelsteenfiches meer dan 10

--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -49,11 +49,12 @@ OverzichtSpelersController2=Number of players correct & game has been created!
 OverzichtSpelersController3=Number of players incorrect
 #starttspelcontroller
 btnFicheClicked1=Unexpected value: 
-btnFicheClicked2=You have chosen all gems!
+btnFicheClicked2=You have chosen a gems!
 btnFicheClicked3=You have selected this gem tile of type %s!
 btnFicheClicked4=This is not allowed!
 btnFicheClicked5=You have too many gems!
 btnFicheClicked6=Click on the gem you want to remove
+btnFicheClicked7=Are you sure you want to remove a %s?
 controleerAlTweeGelijkeFichesGekozen1=You have chosen all the gems!
 controleerAlTweeGelijkeFichesGekozen2=gems chosen!
 controleerAlDrieFichesGekozen1=gems chosen!
