--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -48,12 +48,13 @@ OverzichtSpelersController1=Spel gestart
 OverzichtSpelersController2=Aantal spelers correct & spel is aangemaakt!
 OverzichtSpelersController3=Aantal spelers incorrect
 #starttspelcontroller
-btnFicheClicked1=Unexpected value: 
+btnFicheClicked1=waarde kan niet ! 
 btnFicheClicked2=Edelsteenfiche gekozen!
 btnFicheClicked3=Je hebt deze edelsteenfiche van het soort %s gekozen!
 btnFicheClicked4=Dit mag niet!
 btnFicheClicked5=Je hebt te veel fiches!
 btnFicheClicked6=Klik op een fiche die je wil verwijderen
+btnFicheClicked7=Ben je zeker dat je een %s wil verwijderen
 controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
 controleerAlDrieFichesGekozen1=Fiches gekozen!
