Edesteenfiches gemaakt, onwtikkelingskaarten 1 per keer kopen gedaan Alles af??!!

--- a/src/languages/Messages_nl.properties
+++ b/src/languages/Messages_nl.properties
@@ -53,7 +53,7 @@ btnFicheClicked2=Edelsteenfiche gekozen!
 btnFicheClicked3=Je hebt deze edelsteenfiche van het soort %s gekozen!
 btnFicheClicked4=Dit mag niet!
 btnFicheClicked5=Je hebt te veel fiches!
-btnFicheClicked6=Klik op een fiche die je wil verwijderen
+btnFicheClicked6=Je mag maar 10 edelsteenfiches in totaal hebben\nKlik op een fiche die je wil verwijderen
 btnFicheClicked7=Ben je zeker dat je een %s wil verwijderen
 controleerAlDrieFichesGekozen1=Fiches gekozen!
 controleerAlDrieFichesGekozen2=Je hebt alle fiches gekozen
