--- a/src/languages/Messages_en.properties
+++ b/src/languages/Messages_en.properties
@@ -53,7 +53,7 @@ btnFicheClicked2=You have chosen a gems!
 btnFicheClicked3=You have selected this gem tile of type %s!
 btnFicheClicked4=This is not allowed!
 btnFicheClicked5=You have too many gems!
-btnFicheClicked6=Click on the gem you want to remove
+btnFicheClicked6=You may only have 10 gems in total\nClick on the gem you want to remove
 btnFicheClicked7=Are you sure you want to remove a %s?
 controleerAlTweeGelijkeFichesGekozen1=You have chosen all the gems!
 controleerAlTweeGelijkeFichesGekozen2=gems chosen!
